hphp/hack/test/typecheck/print_in_rx1.php.exp
File "print_in_rx1.php", line 6, characters 3-9:
'echo' or 'print' are not allowed in reactive or shallow-reactive functions. (Typing[4226])
