hphp/hack/test/typecheck/print_in_rx1.php
<?hh // strict

<<__Rx>>
function f(): void {
  // should be error
  print 1;
}
